
  Project : SHTRIH-M JavaPOS fiscal printer driver
  Company : SHTRIH-M www.shtrih-m.ru (495) 787-6090
  Url     : https://github.com/shtrih-m/javapos_shtrih
    
********************************************************************************

  21.04.2022
  deviceServiceVersion = 1013648

  [-] Fixed error header printing
  [-] Fixed extended error code 299 to JPOS_E_TIMEOUT

********************************************************************************

  14.04.2022
  deviceServiceVersion = 1013647

  [-] Fixed error with slow receipt printing
  
********************************************************************************

  05.04.2022
  deviceServiceVersion = 1013646

  [-] Fixed error with receipt item adjustments
  
********************************************************************************

  11.02.2022
  deviceServiceVersion = 1013642

  [-] Added result check for operation tags 
  [-] Changed defaut value of parameter tagsBeforeItem to false
  
********************************************************************************

  03.02.2022
  deviceServiceVersion = 1013641

  [-] Added fix for fiscal storage message header, 
      field "P-protocol version" changed from 0x0102 to 0x0120 
      if header has no checksum
  
********************************************************************************

  01.02.2022
  deviceServiceVersion = 1013640

  [-] Fixed error with logo printing
  
********************************************************************************

  27.01.2022
  deviceServiceVersion = 1013639

  [-] Return price correction in printRecItem method
	  
********************************************************************************

  15.12.2021
  deviceServiceVersion = 1013638

  [+] Added command 0xFF61 timeout correction on driver start.
      If command 0xFF61 timeout less than KM server timeout, 
	  driver will set command 0xFF61 timeout to KM server timeout + 1 second.
	  