@@ -1,5 +1,5 @@
 package com.shtrih.util;
 
 public class ServiceVersion {
-    public static final String VERSION = "647-3-gb8f370f";
+    public static final String VERSION = "647-4-g1a6f164";
 }
