@@ -3,7 +3,7 @@ Ant-Version: Apache Ant 1.9.4
 Created-By: 1.8.0_202-b08 (Oracle Corporation)
 Bundle-Name: kktnetd
 Bundle-Version: 1.0.1
-Bundle-Date: 2022-04-21 14:11:20 MSK
+Bundle-Date: 2022-04-21 16:08:10 MSK
 Implementation-Title: kktnetd
 Implementation-Version: 1.0.1
 Implementation-URL: http://www.shtrih-m.com
